tests/snapshots/snapshots__pipeline@alias_unknown.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/alias_unknown.pr
---
== tokens ==
VOpen Effect UIdent("Tick") VOpen Ctl Ident("tick") LParen KwUnit RParen Colon KwInt VClose VSemi Alias UIdent("App") Eq LBrace UIdent("Tick") Comma UIdent("Missing") RBrace VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Int(IntLit { value: 1, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Tick",
            params: [],
            ops: [
                EffOp {
                    name: "tick",
                    params: [
                        Unit,
                    ],
                    ret: Int,
                    grade: Many,
                },
            ],
            span: 0..34,
        },
    ],
    errors: [],
    aliases: [
        AliasDecl {
            name: "App",
            labels: [
                EffLabel {
                    name: "Tick",
                    args: [],
                },
                EffLabel {
                    name: "Missing",
                    args: [],
                },
            ],
            span: 36..63,
        },
    ],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 77..84,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 85..86,
                        },
                    ],
                ),
                span: 77..87,
            },
            wheres: [],
            span: 65..87,
        },
    ],
}

== types ==
Type Error: unknown effect `Missing` in alias `App`
   ╭─[ <source>:4:1 ]
   │
 4 │ alias App = {Tick, Missing}
   │ ─────────────┬─────────────  
   │              ╰─────────────── unknown effect `Missing` in alias `App`
───╯
